Отказ от deprecated api по инстанциированию классов